# revise-fastAPI

./: .gitignore  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0db0704d6623_create_users_table.py  25b4d74c5fc9_create_users_table.py  2a7fd3a71a27_create_employee_table.py  b40c177a780a_create_employee_table.py  b7024f2bb3e6_added_timestamps_and_updated_role.py
app/: main.py
app/api/: auth.py  employee.py
app/core/: config.py  permissions.py  role.py  security.py
app/db/: base.py  database.py
app/models/: employee.py  user.py
app/schemas/: auth.py  employee.py  error.py  user.py
app/services/: auth.py  employee.py  jwt.py  user_service.py
test/: test.rest
